networkpolicies/ingress/gotowiec.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx1
  labels:
    app: nginx1
spec:
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      hostname: nginx1
      containers:
      - name: nginx
        image: stenote/nginx-hostname
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
  labels:
    app: nginx1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx1
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      hostname: nginx2
      containers:
      - name: nginx
        image: stenote/nginx-hostname
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2
  labels:
    app: nginx2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx2
