networkpolicies/ingress/endpoint.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nginx.example.com
      http:
        paths:
        - path: /nginx1
          backend:
            serviceName: nginx1
            servicePort: 80
        - path: /nginx2
          backend:
            serviceName: nginx2
            servicePort: 80
