networkpolicies/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: nginx1.example.com
    http:
      paths:
        - backend:
            serviceName: nginx1
            servicePort: 80
  - host: nginx2.example.com
    http:
      paths:
      - backend:
          serviceName: nginx2
          servicePort: 80
